--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,14 @@ h1 {
     text-align: center;
     line-height: 1.2;
 }
+h2 {
+    font-family: $heading-font;
+    font-size: 32px;
+    color: $white;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1.2;
+}
 
 
 // Form
