--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $global-weight-bold: 800;
 
 //Colours
 $primary-color: #609CFF;
+$primary-color-hover: #4b8cf4;
 $secondary-color: #4a6789;
 $warning-color: #FF7C69;
 $black: #1F1F1F;
