--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;500;900&display=swap');
 
+// Packages
+@import "include-media/dist/_include-media.scss";
+
 // Global
 @import "./variables.scss";
 @import "./global.scss";
