--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -100,5 +100,25 @@ $code-background: #2E3031;
             stroke: $white;
         }
     }
+    .code__codeline {
+        position: relative;
+        margin-bottom: 5px;
+    }
+    .code__del-icon {
+        position: absolute;
+        left: -25px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #404142;
+        transition: all .2s ease;
+        &:hover {
+            cursor: pointer;
+            color: $code-red;
+            transform: translateY(-50%) scale(1.2);
+        }
+    }
 }
 
