Fix: switcher active hover colour

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -102,8 +102,13 @@
         }
         &.active {
             background: $primary-color;
+            &:hover,
+            &:focus {
+                background: $primary-color;
+            }
         }
-        &:hover {
+        &:hover,
+        &:focus {
             cursor: pointer;
             background: rgba($white, .2);
         }
